--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "electrical-equinox",
+  "name": "simple-astro",
   "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^2.0.18",
-    "@astrojs/mdx": "^0.17.2",
-    "@astrojs/rss": "^2.1.1",
-    "@astrojs/sitemap": "^1.1.0"
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+      "dev": "astro dev",
+      "start": "astro dev",
+      "build": "astro build",
+      "preview": "astro preview",
+      "astro": "astro"
+    },
+    "dependencies": {
+      "astro": "^2.1.3",
+      "@astrojs/mdx": "^0.18.1",
+      "@astrojs/rss": "^2.3.0",
+      "@astrojs/sitemap": "^1.2.1"
+    }
   }
-}
